        when scenario don't have next_scenario
     * replace "Downloading next level..." by "Downloading next scenario..."
     * fixed controler change not sended to all client (bug #8138)
     * client now tells the server if a game ended in victory or defeat
     * configurable castle size for random map generator (patch #598, FR #3232)
     * team names translation now supported
   * scenarios
     * scenarios can set faction, recruit, leader, and some other initial
       settings previously ignored in multiplayer
     * added option to have random time of day in begin of multiplayer game
   * maps:
     * new multiplayer maps: The Manzivan Traps, 4p Hamlets
     * revised maps: Blitz, Charge, Den of Onis, Sablestone Delta, Sulla's Ruins
     * made the AI recruit less scouts by setting the village_per_scout parameter
 * Python AI
   * Added various input validations
   * Set Python errors upon error
   * added support for optipng optimization in the compilation process
 * terrain system
   * The entire underlaying system has been converted to a new system this
     might render some UMC broken, read this forum thread for more details
     http://www.wesnoth.org/forum/viewtopic.php?t=14910
   * Terrain of the starting position can be changed in the map, the automatic
     conversion to a keep is no longer done
   * New definition for the maps in terrain-graphics
   * All keeps have their own letter 
   * Added wildcard matching support in a few cases
   * Added support use custom the village mouse-over texts depending on the
     ownership
   * Added a conversion script to convert old maps
 * units:
   * balancing changes:
     * increased the HP of the Longbowman from 45 to 51
     * decreased the XP requirement of the Longbowman from 80 to 68
     * increased the HP of the Master Bowman from 58 to 67
     * decreased the HP of the Arch Mage from 57 to 54
     * increased the melee attack of the Shyde from 4-2 to 6-2