@@ -51,6 +51,7 @@ Version 1.3-svn:
       * New maps: The Manzivan Traps, 4p Hamlets.
       * Revised maps: Blitz, Den of Onis, Sablestone Delta, Sulla's Ruins.
     * Added an option for choosing a random starting time of day.
+    * Lowered the multiplayer lobby lag.
 
   * Sound
     * New or revised sound effects: morning star, holy magic.
